2006-10-13  Colin McCormack <coldstore@users.sf.net>
	* win/tclWinFile.c: corrected erroneous attempt to protect
	against NULL return from Tcl_FSGetNormalizedPath
	per Bug 1548263 causing Bug 1575837.

2006-10-13  Daniel Steffen  <das@users.sourceforge.net>

	* unix/tclUnixThrd.c (TclpThreadGetStackSize): on Darwin, use
	* unix/tcl.m4: pthread_get_stacksize_np() API to get thread stack size.
	* unix/configure: autoconf-2.59
	* unix/tclConfig.h.in: autoheader-2.59

2006-10-12  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclInterp.c (ApplyObjCmd):
	* tests/interp.test (interp-14.5-10): made [interp alias] use the
	ensemble rewrite machinery to produce better error messages 
	[Bug 1576006]
	
2006-10-12  David Gravereaux <davygrvy@pobox.com>

	* win/nmakehlp.c: Replaced all wnsprintf() calls with snprintf().
	wnsprintf was not in my shwlapi header file (VC++6)

2006-10-11  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclPkg.c (Tcl_PackageRequireEx):	Corrected crash
	when argument version=NULL passed in.

2006-10-10  Don Porter  <dgp@users.sourceforge.net>

	*** 8.5a5 TAGGED FOR RELEASE ***

	* changes:	Updates for 8.5a5 release.

	* generic/tclNamespace.c (TclTeardownNamespace):  After the
	commandPathSourceList of a namespace is cleared, set the
	commandPathSourceList to NULL so we don't try to walk the list
	a second time, possibly after it is freed.  [Bug 1566526]
	* tests/namespace.test (namespace-51.16):	Added test.

2006-10-09  Miguel Sofer  <msofer@users.sf.net>

	* doc/UpVar.3: brough the docs in accordance to the code. Ever
	since 8.0, Tcl_UpVar(2)? accepts TCL_NAMESPACE_ONLY as a flag
	value, and var-3.4 tests for proper behaviour. The docs only
	allowed 0 and TCL_GLOBAL_ONLY. [Bug 1574099]
	
2006-10-09  Miguel Sofer  <msofer@users.sf.net>

	* tests/*.test: updated all tests to refer explicitly to the
	global variables ::errorInfo, ::errorCode, ::env and
	::tcl_platform: many were relying on the alternative lookup in the